--- a/arriving-service/src/main/resources/application.yml
+++ b/arriving-service/src/main/resources/application.yml
@@ -1,6 +1,11 @@
+
 server:
   port: 0
 
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
+spring:
+  cloud:
+    config:
+      profile: dev
