--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
           default-label: "main"
+  security:
+    user:
+      name: root
+      password: secret
 
 server:
   port: 8888
