--- a/product-microservice/src/main/resources/application.yml
+++ b/product-microservice/src/main/resources/application.yml
@@ -1,16 +1,3 @@
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/prueba
-    username: root
-    password: 12345
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-  application:
-    name: product-microservice
 
 server:
   port: 0
@@ -18,3 +5,9 @@ server:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
+spring:
+  cloud:
+    config:
+      profile: dev
+  application:
+    name: product-microservice
