--- a/product-microservice/src/main/resources/bootstrap.yml
+++ b/product-microservice/src/main/resources/bootstrap.yml
@@ -1,6 +1,21 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
+server:
+  port: 0
 spring:
   cloud:
     config:
       uri: http://localhost:8888
       username: root
       password: secret
+      profile: dev
+  application:
+    name: product-microservice
+
+
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}
