--- a/service-configuration/product-microservice-dev.yml
+++ b/service-configuration/product-microservice-dev.yml
@@ -1,7 +1,6 @@
 
-constants:
-  actuator:
-    testProp= "Testing"
+key:
+  name: Test
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/prueba
