--- a/arriving-service/src/main/resources/bootstrap.yml
+++ b/arriving-service/src/main/resources/bootstrap.yml
@@ -8,9 +8,15 @@ spring:
       profile: dev
   application:
     name: arriving-microservice    
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 server:
   port: 0
 
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
+    
