--- a/product-microservice/pom.xml
+++ b/product-microservice/pom.xml
@@ -65,6 +65,13 @@
 			<artifactId>spring-cloud-starter-vault-config</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+	
+		
 	</dependencies>
 
 	<build>
