--- a/product-microservice/src/main/resources/bootstrap.yml
+++ b/product-microservice/src/main/resources/bootstrap.yml
@@ -17,6 +17,11 @@ spring:
       token: 00000000-0000-0000-0000-000000000000
   application:
     name: product-microservice
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest  
 
 
 eureka:
