--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,15 +18,28 @@ spring:
       discovery:
         locator:
           enabled: true
+      default-filters: TokenRelay
     loadbalancer:
       ribbon:
         enabled: false
-        
+
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:9090/realms/techserv-microservice-realm
+        registration:
+          spring-cloud-gateway-client:
+            scope: openid
+            client-id: spring-cloud-gateway-client
+            client-secret: WlLJUm8bKSIOz2st7cNkBw34zGa2HffL
+            provider: keycloak
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/spring-cloud-gateway-client
+
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
 
 
-
-    
-              
