--- a/product-microservice/src/main/resources/bootstrap.yml
+++ b/product-microservice/src/main/resources/bootstrap.yml
@@ -21,7 +21,12 @@ spring:
     host: localhost
     port: 5672
     username: guest
-    password: guest  
+    password: guest
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: http://localhost:9090/realms/techserv-microservice-realm
 
 
 eureka:
@@ -32,4 +37,4 @@ management:
     web:
       exposure:
         include: "*"
-        
+
