--- a/service-configuration/usuarios-microservice-dev.yml
+++ b/service-configuration/usuarios-microservice-dev.yml
@@ -6,8 +6,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: false
+      ddl-auto: create-drop
+    show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
   application:
     name: usuarios-microservice
