--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -20,6 +20,12 @@ spring:
            lb://USUARIOS-MICROSERVICE
          predicates:
            - Path=/api/usuarios/**
+           
+       - id: oauth-microservice
+         uri:
+           lb://OAUTH-MICROSERVICE  
+         predicates:
+           - Path=/api/security/**        
             
            
         
