--- a/oauth/src/main/resources/bootstrap.yml
+++ b/oauth/src/main/resources/bootstrap.yml
@@ -24,3 +24,9 @@ management:
     web:
       exposure:
         include: "*"
+
+        
+      cors:
+        allowed-headers:
+        - "Cokie"
+        - "Set-Cokie"
